force-app/main/default/objects/VCG_CPQ_Product_Equivalency__c/VCG_CPQ_Product_Equivalency__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Product Equivalency</label>
    <nameField>
        <label>Equivalency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Product Equivalencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>