force-app/main/default/objects/VCG_CPQ_Product_Equivalency__c/fields/Equivalent_Product__c.field-meta.xml
<CustomField>
    <fullName>Equivalent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equivalent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>VCG_CPQ_Product_Equivalencies1</relationshipName>
    <type>Lookup</type>
</CustomField>