force-app/main/default/objects/VCG_CPQ_Product_Equivalency__c/fields/Is_Many_to_One__c.field-meta.xml
<CustomField>
    <fullName>Is_Many_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is a Many-to-One mapping. Leave unchecked for One-to-One and One-to-Many.</inlineHelpText>
    <label>Is Many to One</label>
    <type>Checkbox</type>
</CustomField>