force-app/main/default/objects/VCG_CPQ_Product_Equivalency__c/fields/Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Equivalent Products</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Equivalencies</relationshipName>
    <type>Lookup</type>
</CustomField>